# addic7ed-async

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
addic7ed_async/: __main__.py  addic7ed.py  helpers.py
