[metadata]
name = addic7ed-async
version = 0.0.1
description = async addic7ed.com subtitles downloader

[options]
packages = addic7ed_async
install_requires = 
   aiosqlite
   aiofiles
   aiohttp-client-cache
   beautifulsoup4
   guessit

[options.entry_points]
console_scripts =
	addic7ed-async = addic7ed_async.__main__:main
