[metadata]
name = addic7ed-async
version = 0.0.1
description = async addic7ed.com subtitles downloader

[options]
packages = addic7ed_async
install_requires = 
   aiohttp-client-cache[filesystem]
   beautifulsoup4
   guessit
   html5lib
   python-iso639

[options.entry_points]
console_scripts =
	addic7ed-async = addic7ed_async:__main__.sync_main
